# flet

./: README.md  flet_000.py  flet_001.py  flet_002.py  flet_003.py  flet_004.py  flet_005.py  flet_006.py  flet_007.py  flet_008.py  flet_009.py  flet_011.py  flet_012.py  flet_013.py  flet_014.py  flet_015.py  flet_016.py  flet_020.py  flet_030.py  flet_040.py  flet_050.py  flet_060.py  flet_061.py  flet_070.py  flet_071.py  flet_072.py  flet_080.py  flet_090.py  flet_091.py  flet_092.py  flet_093.py  flet_094.py  flet_100.py
botomnav001/: README.md  main.py
botomnav001/pages/: about.py  home.py  navcom.py
dashboard1/app/: eaConf.json  icon1.py  main.py  main1.py  main5.py  requirements.txt
exoplanets/exo_008/: README.md  Untitled.ipynb  exo_009_list1.ipynb  main.py  requirements.txt
exoplanets/exo_009/: main.py
exoplanets/exo_009 - Copie/: README.md  plotly2.py
exoplanets/exo_009b/: main.py
exoplanets/exo_010/: bottom_app_bar.py  dt1.py  dt2.py  dt3.py  dt4.py  dt5.py  exo11test.py  main.py
exoplanets/exo_010_old/: README.md  exo11test.py  mainCopie.py
exoplanets/exo_011/: README.md  chat1.py  main.py
exoplanets/exo_012/: README.md  main.py  testplotly.py  testplotly2.py
exoplanets/exo_013/: README.md  autocomplete1.py  autocomplete2.py  autocomplete3.py  autocomplete4.py  barchart1.py  (+7 more)
expense1/: README.md  main.py
flet_route/: build_apk.bat  main.py  requirement.txt
flet_routing_navbar/: State.py  main.py
fletpages/: fletpages_012.ipynb
helloworld/: main.py
simplefet/simple_001/: pyproject.toml
simplefet/simple_001/src/: main.py
(+110 files in other folders)
